--- a/ProcessorUnit/App.config
+++ b/ProcessorUnit/App.config
@@ -3,20 +3,35 @@
   <configSections>
     <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
       <section name="ProcessorUnit.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+      <section name="Model.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="Model.Properties.Settings.eInvoiceConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;User ID=eivo;Password=eivoeivo;" providerName="System.Data.SqlClient"/>
     <add name="ModelExtension.Properties.Settings.eInvoiceConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;User ID=eivo;Password=eivoeivo" providerName="System.Data.SqlClient"/>
-  </connectionStrings>  
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
-    </startup>
-    <applicationSettings>
-        <ProcessorUnit.Properties.Settings>
-            <setting name="EIVOPortal" serializeAs="String">
-                <value>http://localhost:2598</value>
-            </setting>
-        </ProcessorUnit.Properties.Settings>
-    </applicationSettings>
+  </connectionStrings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
+  </startup>
+  <applicationSettings>
+    <ProcessorUnit.Properties.Settings>
+      <setting name="EIVOPortal" serializeAs="String">
+        <value>http://localhost:2598</value>
+      </setting>
+    </ProcessorUnit.Properties.Settings>
+    <Model.Properties.Settings>
+      <setting name="EnableEIVOPlatform" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="TaskDelayInMilliseconds" serializeAs="String">
+        <value>60000</value>
+      </setting>
+      <setting name="StoreRoot" serializeAs="String">
+        <value>WebStore</value>
+      </setting>
+      <setting name="DefaultUserCarrierType" serializeAs="String">
+        <value>3J0001</value>
+      </setting>
+    </Model.Properties.Settings>
+  </applicationSettings>
 </configuration>
