--- a/eIVOGo/Web.config
+++ b/eIVOGo/Web.config
@@ -329,10 +329,13 @@
         <value>False</value>
       </setting>
       <setting name="WebApDomain" serializeAs="String">
-        <value>http://192.168.200.70</value>
+        <value>http://localhost:2598</value>
       </setting>
       <setting name="TaskCenter" serializeAs="String">
         <value>TaskCenter</value>
+      </setting>
+      <setting name="EIVO_Service" serializeAs="String">
+        <value>1</value>
       </setting>
     </eIVOGo.Properties.Settings>
     <Model.Properties.Settings>
