--- a/eIVOGo/Properties/Settings.settings
+++ b/eIVOGo/Properties/Settings.settings
@@ -95,5 +95,8 @@
     <Setting Name="TaskCenter" Type="System.String" Scope="Application">
       <Value Profile="(Default)">TaskCenter</Value>
     </Setting>
+    <Setting Name="EIVO_Service" Type="System.Int32" Scope="Application">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
