--- a/eIVOGo/Web.config
+++ b/eIVOGo/Web.config
@@ -15,9 +15,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="ApplicationServices" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;User ID=eivo;Password=eivoeivo;" providerName="System.Data.SqlClient" />
-    <add name="Model.Properties.Settings.eInvoiceConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;User ID=eivo;Password=eivoeivo;Min Pool Size=10;Max Pool Size=1000;" providerName="System.Data.SqlClient" />
-    <add name="ModelExtension.Properties.Settings.eInvoiceConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;User ID=eivo;Password=eivoeivo" providerName="System.Data.SqlClient" />
+    <add name="ApplicationServices" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03_202002;User ID=eivo;Password=eivoeivo;" providerName="System.Data.SqlClient" />
+    <add name="Model.Properties.Settings.eInvoiceConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03_202002;User ID=eivo;Password=eivoeivo;Min Pool Size=10;Max Pool Size=1000;" providerName="System.Data.SqlClient" />
+    <add name="ModelExtension.Properties.Settings.eInvoiceConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03_202002;User ID=eivo;Password=eivoeivo" providerName="System.Data.SqlClient" />
     <add name="Model.Properties.Settings.EINVTurnkey2ConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EINVTurnkey2;Persist Security Info=True;User ID=sa;Password=111111" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
