--- a/Model/Properties/Settings.settings
+++ b/Model/Properties/Settings.settings
@@ -76,10 +76,10 @@
     <Setting Name="EINVTurnkey2ConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=192.168.200.23\SQLEXPRESS;Initial Catalog=EINVTurnkey2;Persist Security Info=True;User ID=sa;Password=111111&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=192.168.200.23\SQLEXPRESS,1433;Initial Catalog=EINVTurnkey2;Integrated Security=True&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=192.168.200.23\SQLEXPRESS;Initial Catalog=EINVTurnkey2;Persist Security Info=True;User ID=sa;Password=111111</Value>
+      <Value Profile="(Default)">Data Source=192.168.200.23\SQLEXPRESS,1433;Initial Catalog=EINVTurnkey2;Integrated Security=True</Value>
     </Setting>
     <Setting Name="DefaultUserCarrierType" Type="System.String" Scope="Application">
       <Value Profile="(Default)">3J0001</Value>
