--- a/Model/app.config
+++ b/Model/app.config
@@ -10,7 +10,7 @@
             connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;Integrated Security=True"
             providerName="System.Data.SqlClient" />
         <add name="Model.Properties.Settings.EINVTurnkey2ConnectionString"
-            connectionString="Data Source=192.168.200.23\SQLEXPRESS;Initial Catalog=EINVTurnkey2;Persist Security Info=True;User ID=sa;Password=111111"
+            connectionString="Data Source=192.168.200.23\SQLEXPRESS,1433;Initial Catalog=EINVTurnkey2;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <applicationSettings>
