--- a/TaskCenter/Web.config
+++ b/TaskCenter/Web.config
@@ -9,6 +9,14 @@
       <section name="TaskCenter.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <connectionStrings>
+    <add name="Model.Properties.Settings.eInvoiceConnectionString"
+        connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+    <add name="Model.Properties.Settings.EINVTurnkey2ConnectionString"
+        connectionString="Data Source=192.168.200.23\SQLEXPRESS,1433;Initial Catalog=EINVTurnkey2;Integrated Security=True"
+        providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
