--- a/eIVOGo/Properties/Settings.settings
+++ b/eIVOGo/Properties/Settings.settings
@@ -95,5 +95,8 @@
     <Setting Name="DefaultUILanguage" Type="System.String" Scope="Application">
       <Value Profile="(Default)">zh-TW</Value>
     </Setting>
+    <Setting Name="ServiceMailBox" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">e-invoicevasc@uxb2b.com</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
