--- a/eIVOGo/Web.config
+++ b/eIVOGo/Web.config
@@ -18,7 +18,7 @@
     <add name="ApplicationServices" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;User ID=eivo;Password=eivoeivo;" providerName="System.Data.SqlClient" />
     <add name="Model.Properties.Settings.eInvoiceConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;User ID=eivo;Password=eivoeivo;Min Pool Size=10;Max Pool Size=1000;" providerName="System.Data.SqlClient" />
     <add name="ModelExtension.Properties.Settings.eInvoiceConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EIVO03;User ID=eivo;Password=eivoeivo" providerName="System.Data.SqlClient" />
-    <add name="Model.Properties.Settings.EINVTurnkey2ConnectionString" connectionString="Data Source=192.168.200.23\sqlexpress,1433;Initial Catalog=EINVTurnkey2;Persist Security Info=True;User ID=sa;Password=111111" providerName="System.Data.SqlClient" />
+    <add name="Model.Properties.Settings.EINVTurnkey2ConnectionString" connectionString="Data Source=192.168.200.23\SQLEXPRESS,1433;Initial Catalog=EINVTurnkey2;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="vs:EnableBrowserLink" value="false" />
@@ -354,6 +354,9 @@
       </setting>
       <setting name="DefaultUILanguage" serializeAs="String">
         <value>zh-TW</value>
+      </setting>
+      <setting name="ServiceMailBox" serializeAs="String">
+        <value>e-invoicevasc@uxb2b.com</value>
       </setting>
     </eIVOGo.Properties.Settings>
     <Model.Properties.Settings>
