--- a/InvoiceClient/app.config
+++ b/InvoiceClient/app.config
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-            <section name="InvoiceClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+            <section name="InvoiceClient.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
         </sectionGroup>
     </configSections>
-    <connectionStrings />
+    <connectionStrings/>
     <startup>
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
     <applicationSettings>
         <InvoiceClient.Properties.Settings>
@@ -15,10 +15,10 @@
                 <value>UXSigner</value>
             </setting>
             <setting name="SignerCspName" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="SignerKeyPassword" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UploadInvoiceFolder" serializeAs="String">
                 <value>Invoice</value>
@@ -114,7 +114,7 @@
                 <value>ReturnedMail</value>
             </setting>
             <setting name="SellerReceiptNo" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="InvoiceTxnPath" serializeAs="String">
                 <value>C:\UXB2B_EIVO</value>
@@ -143,7 +143,7 @@
                 <value>30000</value>
             </setting>
             <setting name="ClientID" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UploadCsvBuyerFolder" serializeAs="String">
                 <value>B2B相對營業人_csv</value>
@@ -152,7 +152,7 @@
                 <value>https://eceivo.uxifs.com/eivo03/Published/UploadAttachmentForGoogle.ashx</value>
             </setting>
             <setting name="ActivationKey" serializeAs="String">
-                <value />
+                <value/>
             </setting>
             <setting name="UploadCsvAllowanceFolder" serializeAs="String">
                 <value>Allowance_csv</value>
