--- a/Uxnet.Com/app.config
+++ b/Uxnet.Com/app.config
@@ -28,8 +28,7 @@
    <setting name="SqlLog" serializeAs="String">
     <value>True</value>
    </setting>
-   <setting name="Uxnet_Com_WS_DocumentService_DocumentCreator"
-    serializeAs="String">
+   <setting name="Uxnet_Com_WS_DocumentService_DocumentCreator" serializeAs="String">
     <value>http://hinet01:8880/DocumentService/DocumentCreator.asmx</value>
    </setting>
    <setting name="UseMessageCenter" serializeAs="String">
@@ -42,7 +41,7 @@
     <value>http://tpit-matrix/CDSAR/published/SendMessage.asmx</value>
    </setting>
    <setting name="LogPath" serializeAs="String">
-    <value />
+    <value/>
    </setting>
    <setting name="DBConnectionStringName" serializeAs="String">
     <value>masterDB</value>
@@ -77,5 +76,5 @@
   </Uxnet.Com.Properties.Settings>
 	</applicationSettings>
 	<startup>
-	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+	<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/></startup>
 </configuration>
