--- a/Model/packages.config
+++ b/Model/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="CsvHelper" version="12.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net45" />
-  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net45" requireReinstallation="true" />
 </packages>
