--- a/ModelExtension/packages.config
+++ b/ModelExtension/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ClosedXML" version="0.95.4" targetFramework="net45" />
-  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net45" />
+  <package id="ClosedXML" version="0.95.4" targetFramework="net45" requireReinstallation="true" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net45" requireReinstallation="true" />
   <package id="ExcelNumberFormat" version="1.0.10" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net45" />
