[2023.10.17] 發票未上傳通知
1.匯出[當日發票未上傳]客戶xlsx列表
https://eguitest.uxifs.com/Intra01/Notification/NotifyInvoiceNotUploadList/YYYYMMDD
2.排程設定寄出[當日發票未上傳]Email通知營業人聯絡人
Model.Helper.InvoiceNotUploadNotification

--- a/eIVOGo/eIVOGo.csproj
+++ b/eIVOGo/eIVOGo.csproj
@@ -499,47 +499,6 @@
     <Content Include="Views\SiteAction\FunctionTitleBar.cshtml" />
     <Content Include="Views\Common\Module\EnumSelector.cshtml" />
     <Content Include="Content\Web.config" />
-    <Content Include="_test\content\Hydrangeas.jpg" />
-    <Content Include="_test\content\Tulips.jpg" />
-    <Content Include="_test\DemoDrawInvoice.aspx" />
-    <Content Include="_test\DemoImage.aspx" />
-    <Content Include="_test\DemoPrintInvoiceCSS.aspx" />
-    <Content Include="_test\DemoPrintInvoicePage.aspx" />
-    <Content Include="_test\DemoPrintInvoicePDF.aspx" />
-    <Content Include="_test\DemoPrintInvoicePOSPage.aspx" />
-    <Content Include="_test\DoActivateUser.aspx" />
-    <Content Include="_test\DoC0701.aspx" />
-    <Content Include="_test\DownloadText.aspx" />
-    <Content Include="_test\GoTesting.aspx" />
-    <Content Include="_test\MyPopupModal.ascx" />
-    <Content Include="_test\MyTest.aspx" />
-    <Content Include="_test\PutFiles.aspx" />
-    <Content Include="_test\Test001.aspx" />
-    <Content Include="_test\TestAll.aspx" />
-    <Content Include="_test\TestD0501.aspx" />
-    <Content Include="_test\TestD0401.aspx" />
-    <Content Include="_test\TestC0401.aspx" />
-    <Content Include="_test\TestC0501.aspx" />
-    <Content Include="_test\TestC0701.aspx" />
-    <Content Include="_test\TestDB.aspx" />
-    <Content Include="_test\TestE0402.aspx" />
-    <Content Include="_test\TestExcel.aspx" />
-    <Content Include="_test\TestFields.aspx" />
-    <Content Include="_test\TestInquiryJsGrid.aspx" />
-    <Content Include="_test\TestInvoiceCancellation.aspx" />
-    <Content Include="_test\TestInvoiceJsGrid.aspx" />
-    <Content Include="_test\TestJS.aspx" />
-    <Content Include="_test\TestJsGrid.aspx" />
-    <Content Include="_test\TestNotifying.aspx" />
-    <Content Include="_test\TestPopup.aspx" />
-    <Content Include="_test\TestPWD.htm" />
-    <Content Include="_test\TestQRCode.aspx" />
-    <Content Include="_test\TestRepeater.aspx" />
-    <Content Include="_test\TestResponse.aspx" />
-    <Content Include="_test\TestResponse2.aspx" />
-    <Content Include="_test\TestRouteConfig.aspx" />
-    <Content Include="_test\TestTask.aspx" />
-    <Content Include="_test\UpdateData.aspx" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <Content Include="Views\InvoiceBusiness\Module\AllowanceCreated.ascx" />
     <Content Include="Views\InvoiceBusiness\Module\InvoiceProcessTypeDirection.ascx" />
@@ -1051,6 +1010,7 @@
     <Content Include="Views\DataExchange\Module\ItemListSorting.cshtml" />
     <Content Include="Views\DataExchange\Module\DataItemQuery.cshtml" />
     <Content Include="Views\DataExchange\Module\NewItem.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Create.cshtml" />
     <None Include="Views\Handling\MailTracking\QueryResult.cshtml" />
     <Content Include="MvcHelper\CreateInvoiceSummaryReport.aspx" />
     <Content Include="Published\PrintSingleAllowance.aspx" />
@@ -1405,46 +1365,6 @@
     <Content Include="Views\Shared\CommonScriptInclude.cshtml" />
     <Content Include="Views\InvoiceBusiness\InvoiceProduct\AddItem.cshtml" />
     <Content Include="Views\InvoiceProcess\Module\IssueAllowance.cshtml" />
-    <Content Include="_test\demodrawinvoice.cshtml" />
-    <Content Include="_test\demoimage.cshtml" />
-    <Content Include="_test\demoprintinvoicecss.cshtml" />
-    <Content Include="_test\demoprintinvoicepage.cshtml" />
-    <Content Include="_test\demoprintinvoicepdf.cshtml" />
-    <Content Include="_test\demoprintinvoicepospage.cshtml" />
-    <Content Include="_test\doactivateuser.cshtml" />
-    <Content Include="_test\doc0701.cshtml" />
-    <Content Include="_test\downloadtext.cshtml" />
-    <Content Include="_test\gotesting.cshtml" />
-    <Content Include="_test\mypopupmodal.cshtml" />
-    <Content Include="_test\mytest.cshtml" />
-    <Content Include="_test\putfiles.cshtml" />
-    <Content Include="_test\SaveTo.ashx" />
-    <Content Include="_test\test001.cshtml" />
-    <Content Include="_test\testall.cshtml" />
-    <Content Include="_test\testc0401.cshtml" />
-    <Content Include="_test\testc0501.cshtml" />
-    <Content Include="Views\_Test\TestC0701.cshtml" />
-    <Content Include="_test\testdb.cshtml" />
-    <Content Include="_test\teste0402.cshtml" />
-    <Content Include="_test\testexcel.cshtml" />
-    <Content Include="_test\testfields.cshtml" />
-    <Content Include="_test\testinquiryjsgrid.cshtml" />
-    <Content Include="_test\testinvoicecancellation.cshtml" />
-    <Content Include="_test\testinvoicejsgrid.cshtml" />
-    <Content Include="_test\testjs.cshtml" />
-    <Content Include="_test\testjsgrid.cshtml" />
-    <Content Include="_test\testnotifying.cshtml" />
-    <Content Include="_test\testpopup.cshtml" />
-    <Content Include="_test\testqrcode.cshtml" />
-    <Content Include="_test\testrepeater.cshtml" />
-    <Content Include="_test\testresponse.cshtml" />
-    <Content Include="_test\testresponse2.cshtml" />
-    <Content Include="_test\testrouteconfig.cshtml" />
-    <Content Include="_test\testtask.cshtml" />
-    <Content Include="_test\updatedata.cshtml" />
-    <Content Include="_test\UploadTo.html" />
-    <Content Include="_test\Web.config" />
-    <Content Include="_test\WebDump.ashx" />
     <Content Include="Views\InvoiceNo\Module\QueryResult.cshtml" />
     <Content Include="Views\InvoiceNo\Module\IntervalItemList.cshtml" />
     <Content Include="Views\InvoiceNo\Module\DataItem.cshtml" />
@@ -1549,7 +1469,6 @@
     <Content Include="Views\Template\TableListViewTemplate.cshtml" />
     <Content Include="Views\Shared\DataTableScript.cshtml" />
     <Content Include="Views\Shared\DataTableStyle.cshtml" />
-    <Content Include="Views\_Test\ExportOrganization.cshtml" />
     <Content Include="Views\InvoiceProcess\InvoiceQueryForAction.cshtml" />
     <Content Include="Views\InvoiceProcess\ScriptHelper\InvoiceAction.cshtml" />
     <Content Include="Views\InvoiceProcess\InvoiceQueryForMIG.cshtml" />
@@ -1605,7 +1524,6 @@
     <Content Include="Views\InvoiceProcess\ResultAction\DownloadMIG.cshtml" />
     <Content Include="Views\Notification\Module\AlertInvoiceNoSafetyStock.cshtml" />
     <Content Include="Views\Notification\NotifyLowerInvoiceNoStock.cshtml" />
-    <Content Include="Views\_Test\TestSmtp.cshtml" />
     <Content Include="Views\InvoiceQuery\MonthlyReport.cshtml" />
     <Content Include="Views\InvoiceQuery\Module\MonthlyReport.cshtml" />
     <Content Include="Views\Organization\Module\CustomSettings.cshtml" />
@@ -1619,10 +1537,6 @@
     <Content Include="Views\OrganizationQuery\Module\SellerList.cshtml" />
     <Content Include="Views\Organization\Module\ApplyBillingPlan.cshtml" />
     <Content Include="Views\Organization\Module\ProcessHeadquarter.cshtml" />
-    <Content Include="Views\_Test\TestJobItem.cshtml" />
-    <Content Include="Views\_Test\SystemInfo.cshtml" />
-    <Content Include="Views\_Test\TestUXCA.cshtml" />
-    <Content Include="Views\_Test\MonthlyBillingReport.cshtml" />
     <Content Include="Views\InvoiceProcess\ResultAction\VoidDone.cshtml" />
     <Content Include="Views\InvoiceProcess\Index2023.cshtml" />
     <Content Include="Views\InvoiceProcess\Module\InvoiceQuery.cshtml" />
@@ -1630,6 +1544,17 @@
     <Content Include="Views\InvoiceProcess\DataQuery\ItemTable.cshtml" />
     <Content Include="Views\InvoiceProcess\DataQuery\ItemList.cshtml" />
     <Content Include="Views\InvoiceProcess\DataQuery\ItemListSorting.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Index.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Apply.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Query.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Set.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\Message.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\QueryIndex.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\QueryItemList.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\QueryResult.cshtml" />
+    <Content Include="Views\InvoiceNumberApply\QueryList.cshtml" />
+    <Content Include="Views\Notification\Module\AlertInvoiceNotUpload.cshtml" />
+    <Content Include="Views\Notification\NotifyInvoiceNotUpload.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddOn\Published\eInvoiceService_201612.asmx.cs">
@@ -1649,6 +1574,7 @@
     <Compile Include="Controllers\HandlingController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InquireInvoiceController.cs" />
+    <Compile Include="Controllers\InvoiceNumberApplyController.cs" />
     <Compile Include="Controllers\InvoiceAuditController.cs" />
     <Compile Include="Controllers\InvoiceBusinessController.cs" />
     <Compile Include="Controllers\IndividualProcessController.cs" />
@@ -1684,6 +1610,7 @@
     <Compile Include="Helper\BranchBusinessCounterpartUploadManager.cs" />
     <Compile Include="Helper\BusinessCounterpartXmlUploadManager.cs" />
     <Compile Include="Helper\DataQuery\InvoiceItemQueryExtensions.cs" />
+    <Compile Include="Helper\DateTimeExtensions.cs" />
     <Compile Include="Helper\ExtensionMethods.cs" />
     <Compile Include="Helper\InvoiceBusinessExtensionMethods.cs" />
     <Compile Include="Helper\LoginHandler.cs" />
@@ -1692,12 +1619,19 @@
     <Compile Include="Helper\PortalExtensionMethods.cs" />
     <Compile Include="Helper\QueryExtensionMethods.cs" />
     <Compile Include="Helper\Security\Authorization\UserAuthorizeAttribute.cs" />
+    <Compile Include="Models\DateLessThanAttribute.cs" />
+    <Compile Include="Models\InvoiceNumberApply.cs" />
+    <Compile Include="Models\InvoiceNumberApplyResponse.cs" />
+    <Compile Include="Models\InvoiceNumberApplyService.cs" />
+    <Compile Include="Models\InvoiceNumberApplyWord.cs" />
     <Compile Include="Models\DataItemDefinition.cs" />
     <Compile Include="Models\DataListSource.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Models\InquireField.cs" />
     <Compile Include="Models\InquireOrganization.cs" />
+    <Compile Include="Models\ViewModel\InvoiceNumberApplyQueryViewModel.cs" />
+    <Compile Include="Models\ViewModel\InvoiceNumberApplyViewModel.cs" />
     <Compile Include="Models\ViewModel\LoginViewModel.cs" />
     <Compile Include="Module\Base\CommonInquireEntity.cs">
       <SubType>ASPXCodeBehind</SubType>
@@ -1945,6 +1879,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="resource\InvoiceNumberApply\" />
     <Folder Include="Views\InvoiceService\" />
     <Folder Include="Views\Issuer\" />
     <Folder Include="Views\SystemExceptionLog\" />
