--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Helper\ERPInvoiceParser.cs" />
     <Compile Include="Helper\ExtensionMethods.cs" />
     <Compile Include="Helper\AuthExtensions.cs" />
+    <Compile Include="Helper\InvoiceNotUploadNotification.cs" />
     <Compile Include="Helper\InvoiceNoSafetyStockNotification.cs" />
     <Compile Include="InvoiceManagement\FullAllowanceDataSetManager.cs" />
     <Compile Include="InvoiceManagement\AttachmentManager.cs" />
